pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
    - name: app
      image: 10.0.2.15:5001/tmaskpl-flask-appv2
      imagePullPolicy: IfNotPresent
